Fixed footer icon alignment

--- a/src/components/Footer/index.module.css
+++ b/src/components/Footer/index.module.css
@@ -16,6 +16,10 @@
     font-size: 1.1rem;
 }
 
+.footer div {
+  display: flex;
+}
+
 .copyright {
   margin-top: 1%;
 }
